tests/lean/lua2.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Assumed: x
hello world
ok
lua2.lean:11 error: executing script, attempt to call global 'rint' (a nil value)
  Assumed: y
