tests/lean/lua2.lean
Variable x : Bool

(**
 a = {}
 print("hello world")
 print ("ok")
 a = {
    x = 10,
    y = 20
 }
 rint ("ok")
**)

Variable y : Bool

